--- a/src/app/features/movies/pages/search/search.html
+++ b/src/app/features/movies/pages/search/search.html
@@ -2,12 +2,12 @@
 
 <div class="search-container">
   <div class="search-header">
-    <h1>🔍 Buscar Películas</h1>
+    <h1>Buscar Películas</h1>
     <div class="search-box">
       <input
         type="text"
         [formControl]="searchControl"
-        placeholder="Busca por título, actor, director..."
+        placeholder="Busca por título..."
         class="search-input"
       />
     </div>
